# SmartEVSE-3-IDF

./: .gitignore
.github/: FUNDING.yml
.github/workflows/: idf-build.yaml  idf-release.yaml
SmartEVSE-3-IDF/: .gitignore  BUILD_IDF.md  CMakeLists.txt  HowToFlash.txt  packfs.py  sdkconfig  sdkconfig.defaults
SmartEVSE-3-IDF/components/: Kconfig.projbuild
SmartEVSE-3-IDF/components/app/: CMakeLists.txt  app_main.c  idf_component.yml
SmartEVSE-3-IDF/components/arduino_compat/: CMakeLists.txt  arduino_compat.cpp  fs_compat.cpp  http_compat.cpp  spi_compat.cpp  update_compat.cpp  wifi_compat.cpp
SmartEVSE-3-IDF/components/arduino_compat/include/: IPAddress.h  arduino_compat.h  arduino_compat_base.h  fs_compat.h  http_compat.h  spi_compat.h  update_compat.h  wifi_compat.h
SmartEVSE-3-IDF/components/arduinojson/: CMakeLists.txt
SmartEVSE-3-IDF/components/emodbus/: CMakeLists.txt
SmartEVSE-3-IDF/components/emodbus/include/: Arduino.h  Client.h  Stream.h
SmartEVSE-3-IDF/components/emodbus/src/: RTUutils.cpp  emodbus_serial1.cpp
SmartEVSE-3-IDF/components/micro_ocpp/: CMakeLists.txt
SmartEVSE-3-IDF/components/micro_ocpp/src/: MicroOcpp.cpp
SmartEVSE-3-IDF/components/micro_ocpp/src/MicroOcpp/Core/: FilesystemAdapter.cpp  FilesystemAdapter.h
SmartEVSE-3-IDF/components/micro_ocpp/src/MicroOcpp/Model/ConnectorBase/: Notification.h
SmartEVSE-3-IDF/components/micro_ocpp/src/MicroOcpp/Model/Transactions/: Transaction.h
SmartEVSE-3-IDF/components/micro_ocpp_mongoose/: CMakeLists.txt
SmartEVSE-3-IDF/components/micro_ocpp_mongoose/src/: MicroOcppMongooseClient.cpp
SmartEVSE-3-IDF/components/mongoose/: CMakeLists.txt
SmartEVSE-3-IDF/components/onewire_bus/: idf_component.yml
SmartEVSE-3-IDF/components/onewire_bus/src/: onewire_bus_impl_rmt.c
SmartEVSE-3-IDF/components/web_assets/: CMakeLists.txt
SmartEVSE-3-IDF/data/: capacity.html  interval.html  styling.css
SmartEVSE-3-IDF/src/: OneWire.cpp  OneWire.h  OneWireESP32.cpp  OneWireESP32.h  ch390.cpp  ch390.h  debug.h  esp32.cpp  esp32.h  etherlcd.cpp  etherlcd.h  glcd.cpp  glcd.h  ipv6.cpp  main.cpp  main.h  main_c.h  meter.cpp  meter.h  modbus.cpp  modbus.h  network_common.cpp  qca.cpp  qca.h  tcp.cpp  utils.cpp  utils.h  wchisp.cpp
SmartEVSE-3-IDF/test/: feed_circuit.sh  feed_mains.sh
docs/: EtherLCD.md  REST_API.md  installation.md  operation.md
integrations/: README.md
integrations/esphome/: ET-SM01 smart meter module.yaml  SlimmeLezer-with-DSMR-reader-API-and-MQTT-with-HTTP-fallback.yaml  WT32-ETH01-SlimmeLezer.yaml
integrations/home-assistant/: HA_P1_DSMR_to_SmartEVSE_API.yaml  HA_SmartEVSE_MQTT_automations.yaml  HA_SmartEVSE_REST_API.yaml
